--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if (${Poco_FOUND})
     target_link_libraries(cpp_webserver_kata Poco::Net Poco::Util
             Threads::Threads)
 
-    add_library(webservers STATIC src/tests.cpp src/Todo.cpp src/Todo.hpp src/Table.cpp src/Table.hpp
+    add_library(webservers STATIC  src/Todo.cpp src/Todo.hpp src/Table.cpp src/Table.hpp
             src/Record.cpp
             src/Record.hpp src/Form.cpp src/Form.hpp src/List.cpp src/List.hpp src/Text.cpp src/Text.hpp src/Hidden.cpp
             src/Hidden.hpp src/Password.cpp src/Password.hpp src/Submit.cpp src/Submit.hpp src/Response.cpp
@@ -29,8 +29,9 @@ if (${Poco_FOUND})
             Threads::Threads Poco::DataSQLite)
     target_include_directories(webservers PRIVATE tests)
 
-    add_executable(tests tests/doctest.cpp)
+    add_executable(tests tests/doctest.cpp src/tests.cpp)
     target_link_libraries(tests webservers)
+    target_include_directories(tests PRIVATE tests)
     add_library(doctest_impl tests/doctest_impl.cpp)
 
     add_executable(crud-server src/CrudMain.cpp)
