--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,3 +21,5 @@ jobs:
       run: mkdir build && cd build && cmake ..
     - name: make
       run: cd build && make
+    - name: make test
+      run: cd build && make test
