--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: libpoco-dev
+        packages: libpoco-dev libelf-dev libdwarf-dev
         version: 1.0
     - name: configure
       run: mkdir build && cd build && cmake ..
