--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,7 +148,7 @@ if(${Poco_FOUND} AND ${spdlog_FOUND})
     src/Data/MigrationsV2.cpp
     src/Data/MigrationsV2.hpp
     src/ImageBrowser/ImageBrowserController.hpp
-    src/ImageBrowser/ImageBrowserApplication.cpp src/Data/PasswordSalting.cpp src/Data/PasswordSalting.hpp)
+    src/ImageBrowser/ImageBrowserApplication.cpp src/Data/PasswordSalting.cpp src/Data/PasswordSalting.hpp src/Data/MigrationsV3.cpp src/Data/MigrationsV3.hpp src/Groups/GroupManagementApplication.cpp src/Groups/GroupManagementApplication.hpp)
   target_compile_definitions(
           webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
   add_backward(webservers)
